public/stylesheets/styles.css
/* ... */
.s-base--metro .o-primary-btn--respec-active:hover,
.t-s1 .o-primary-btn--respec-active:hover,
.t-s6 .o-primary-btn--respec-active:hover,
.t-s10 .o-primary-btn--respec-active:hover {
  color: black;
  background-color: #673ab7;
}

.s-base--metro .o-primary-btn--discharge-active,
.t-s1 .o-primary-btn--discharge-active,
.t-s6 .o-primary-btn--discharge-active,
.t-s10 .o-primary-btn--discharge-active {
  background-color: #673ab7;
}

.s-base--metro .o-primary-btn--discharge-active:hover,
.t-s1 .o-primary-btn--discharge-active:hover,
.t-s6 .o-primary-btn--discharge-active:hover,
.t-s10 .o-primary-btn--discharge-active:hover {
  color: black;
  background-color: #673ab7;
}

/* #endregion t-s6 t-s10 */

/* #endregion themes */

/* #endregion o-primary-btn */

/* #region c-subtab-option-container */

.c-subtab-option-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  padding-bottom: 0.8rem;
}

/* #endregion c-subtab-option-container */

/* #region o-prestige-button */

.o-prestige-button {
  width: 22rem;
  height: 7rem;
  font-family: Typewriter, serif;
  font-size: 1.1rem;
  border: var(--var-border-width, 0.2rem) solid;
  border-radius: var(--var-border-radius, 0.4rem);
  transition-duration: 0.2s;
  cursor: pointer;
}

.o-prestige-button br {
  pointer-events: none;
}

.o-prestige-button b {
  pointer-events: none;
}

/* #region Big Crunch */

.o-infinity-button {
  font-weight: bold;
  color: var(--color-infinity);
  background-color: var(--color-prestige--accent);
  border-color: var(--color-infinity);
}

.o-infinity-button:hover {
  color: black;
  background-color: var(--color-infinity);
}

.o-infinity-button span {
  transition-duration: 0.2s;
}

.o-infinity-button:hover span {
  color: black;
}

.s-base--metro .o-infinity-button {
  box-shadow: 0.1rem 0.1rem 0.1rem 0 #9e9e9e;
}

.t-dark-metro .o-infinity-button {
  box-shadow: 1px 1px 1px 0 black;
}

.o-infinity-button--unavailable {
  opacity: 0.5;
  cursor: default;
}

/* #region Eternity */

.o-eternity-button {
  font-weight: bold;
  color: var(--color-eternity);
  background-color: var(--color-prestige--accent);
  border-color: var(--color-eternity);
  cursor: pointer;
}

.o-eternity-button:hover {
  color: black;
  background-color: var(--color-eternity);
}

.o-eternity-button span {
  transition-duration: 0.2s;
}

.o-eternity-button:hover span {
  color: black;
}

.t-s1 .o-eternity-button:hover span {
  color: var(--color-text);
}

.t-s1 .o-eternity-button:hover {
  color: black;
  border-color: black;
}

.s-base--metro .o-eternity-button {
  box-shadow: 0.1rem 0.1rem 0.1rem 0 #9e9e9e;
}

.o-eternity-button--dilation {
  font-weight: bold;
  color: var(--color-dilation);
  background-color: black;
  border-color: var(--color-dilation);
}

.o-eternity-button--dilation:hover {
  color: black;
  background-color: var(--color-dilation);
}

.o-eternity-button--dilation span {
  transition-duration: 0.2s;
}

.o-eternity-button--dilation:hover span {
  color: black;
}

.t-s1 .o-eternity-button--dilation:hover span {
  color: var(--color-text);
}

.t-s1 .o-eternity-button--dilation:hover {
  color: black;
  background: var(--color-dilation);
  border-color: black;
}

.o-eternity-button--unavailable {
  opacity: 0.5;
  cursor: default;
}

/* #endregion Eternity */

/* #endregion Big Crunch */

/* #endregion o-prestige-btn */

/* #region l-spoon-btn-group */

.l-spoon-btn-group {
  display: flex;
  flex-direction: column;
}

.l--spoon-btn-group__little-spoon {
  align-self: stretch;
  margin-top: 0.3rem;
}

.l--spoon-btn-group__little-spoon-reality-btn {
  width: 20rem;
  align-self: center;
  margin-top: -0.9rem;
  margin-bottom: 1.2rem;
}

/* #endregion l-spoon-btn-group */

.o-big-checkbox {
  width: 2rem;
  height: 1.8rem;
}

/* #region hint-text */

.o-dim-path-priority {
  font-size: 1.55rem;
  color: white;
  text-shadow:
    -0.1rem -0.1rem 0 black,
    -0.1rem -0.1rem 0 black,
    0.1rem -0.1rem 0 black,
    0.1rem -0.1rem 0 black,
    -0.1rem 0.1rem 0 black,
    -0.1rem 0.1rem 0 black,
    0.1rem 0.1rem 0 black,
    0.1rem 0.1rem 0 black;
  pointer-events: none;
}

.l-hint-text--challenge {
  top: -2.2rem;
}

.l-hint-text--time-study {
  top: -1.95rem;
}

.l-hint-text--reality-upgrade {
  top: -1.7rem;
  font-size: 1.25rem;
}

.c-hint-text--reality-upgrade {
  font-weight: bold;
  color: var(--color-text);
  text-shadow: none;
}

.l-hint-text--achievement {
  top: -2rem;
  z-index: 1;
}

.o-hint-text--alchemy-node {
  font-size: 1.2rem;
  color: #4f5957;
  text-shadow: none;
  transition: opacity 0.2s;
}

.o-hint-text--alchemy-node--unfocused {
  opacity: 0;
}

.l-hint-text--alchemy-node {
  top: 2.6rem;
  left: 50%;
  transform: translate(-50%);
}

/* #endregion hint-text */

/* #region Header */

/* #region IP Amount */

.c-game-header__tesseract-available {
  font-family: Typewriter, serif;
  color: #2ebce6;
  background: #111117;
  border-width: var(--var-border-width, 0.2rem) solid;
  margin-bottom: 1.2rem;
  padding: 1rem;
  transition-duration: 0.15s;
  animation: a-tesseract-shift 5s infinite;
  cursor: pointer;
}

.s-base--dark .c-game-header__tesseract-available {
  background: #eeeeee;
  animation: a-tesseract-shift-dark 5s infinite;
}

.c-infinity-dim-tab__tesseract-available:hover {
  color: #306d80;
  background: black;
}

.s-base--dark .c-infinity-dim-tab__tesseract-available:hover {
  background: white;
}

.c-game-header__ip-amount {
  font-weight: bold;
}

.t-dark .c-game-header__ip-amount,
.t-s6 .c-game-header__ip-amount,
.t-s10 .c-game-header__ip-amount {
  color: white;
  text-shadow: 0 0 0.7rem white;
}

.s-base--metro .c-game-header__ip-amount {
  color: #ff9800;
}

.t-s1 .c-game-header__ip-amount {
  color: #7d3c1b;
  text-shadow: 0.1rem 0.1rem 0 black;
}

/* #endregion IP Amount */

/* #region EP Amount */

.l-game-header__eternity-points {
  position: absolute;
  right: 75%;
}

.c-game-header__ep-amount {
  font-weight: bold;
}
/* ... */

